--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @import "./css/variables.css";
 
 #root {
-    grid-template-rows: 60px 1fr 60px;
-    @apply bg-dark h-screen w-screen grid;
+    @apply bg-background h-screen grid;
 }
 
 .animated {
     @apply transition ease-in-out duration-300;
+}
+
+* {
+    font-family: 'Inter Variable', sans-serif;
 }
