--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 @import "./css/variables.css";
 
 #root {
-    @apply bg-background h-screen grid;
+    @apply bg-background grid;
 }
 
 .animated {
     @apply transition ease-in-out duration-300;
 }
 
+.responsive-container{
+    @apply md:px-20 xs:px-10 p-5 py-20 pb-0
+}
+
 * {
-    font-family: 'Inter Variable', sans-serif;
+    scroll-behavior: smooth;
+}
+
+* {
+    font-family: 'Inter', sans-serif;
 }
