--- a/src/components/Cards/styles.css
+++ b/src/components/Cards/styles.css
@@ -5,7 +5,7 @@
 }
 
 .card h1 {
-    @apply text-4xl font-semibold mb-2 text-white
+    @apply text-4xl font-semibold mb-2 text-gray-300
 }
 
 .card h2 {
@@ -17,7 +17,7 @@
 }
 
 .card .tags {
-    @apply flex flex-wrap gap-2
+    @apply flex flex-wrap gap-2 mt-auto
 }
 
 .card .learn-more {
